test/cppcheck_suppressions.txt
//
// Ignore libinjection related stuff.
//
*:others/libinjection/src/libinjection_html5.c
*:others/libinjection/src/libinjection_sqli.c
*:others/libinjection/src/libinjection_xss.c
*:others/libinjection/src/reader.c
*:others/libinjection/src/sqli_cli.c
*:others/libinjection/src/testdriver.c
*:others/libinjection/src/test_speed_sqli.c
*:others/libinjection/src/test_speed_xss.c


//
// Lets ignore mbedtls.
//
*:others/mbedtls/base64.c
*:others/mbedtls/md5.c
*:others/mbedtls/sha1.c


//
// Code imported from ModSecurity v2...
//
shiftNegative:src/utils/msc_tree.cc
*:src/utils/acmp.cc
*:src/utils/msc_tree.cc
invalidScanfArgType_int:src/rules_set_properties.cc:101
invalidScanfArgType_int:src/rules_set_properties.cc:102
redundantAssignment:src/operators/pm.cc:94



// 
// ModSecurity v3 code...
// 
unmatchedSuppression:src/utils/geo_lookup.cc:82
useInitializationList:src/utils/shared_files.h:87
unmatchedSuppression:src/utils/msc_tree.cc
functionStatic:headers/modsecurity/transaction.h:456
duplicateBranch:src/audit_log/audit_log.cc:223
unreadVariable:src/request_body_processor/multipart.cc:435
stlcstrParam:src/audit_log/writer/parallel.cc:145
functionStatic:src/engine/lua.h:70
functionStatic:src/engine/lua.h:71
functionConst:src/utils/geo_lookup.h:49
useInitializationList:src/operators/rbl.h:69
constStatement:test/common/modsecurity_test.cc:82
danglingTemporaryLifetime:src/modsecurity.cc:206
functionStatic:src/operators/geo_lookup.h:35
duplicateBreak:src/operators/validate_utf8_encoding.cc
duplicateBranch:src/request_body_processor/multipart.cc:91
syntaxError:src/transaction.cc:62
noConstructor:src/variables/variable.h:152
duplicateBranch:src/request_body_processor/multipart.cc:93
danglingTempReference:src/modsecurity.cc:206
knownConditionTrueFalse:src/operators/validate_url_encoding.cc:77
knownConditionTrueFalse:src/operators/verify_svnr.cc:87

noExplicitConstructor:seclang-parser.hh
constParameter:seclang-parser.hh

unusedFunction
missingIncludeSystem
useStlAlgorithm
preprocessorErrorDirective
funcArgNamesDifferent
unmatchedSuppression
missingInclude

purgedConfiguration


// Examples
memleak:examples/reading_logs_via_rule_message/reading_logs_via_rule_message.h:147
memleak:examples/using_bodies_in_chunks/simple_request.cc
